2000-03-03   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* lisp/gnus.el (gnus-revision-number): Increment to 12.

	* lisp/gnus-sum.el: Add autoload setting for `pgg-decrypt-region'
	and `pgg-verify-region'.
	(gnus-summary-decrypt-article): New command.
	(gnus-summary-verify-article): New command.
	(gnus-summary-article-map): Bind them.
	(gnus-wheel-summary-scroll): Fix paren style.

2000-03-02  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-revision-number): Increment to 11.

2000-03-01  MORIOKA Tomohiko  <tomo@m17n.org>

	* lisp/nnheader.el (nnheader-insert-nov): Use
	`mime-entity-fetch-field' instead of `mime-fetch-field'.

	* lisp/gnus-sum.el (gnus-summary-line-format-alist): Use
	`mime-entity-read-field' instead of `mime-read-field'.
	(gnus-article-sort-by-author): Likewise.

2000-03-02   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* lisp/nnimap.el (nnimap-request-article-part): Don't use
	`imap-capability' to detect BODYDETAIL response.

2000-03-01   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* lisp/gnus.el (gnus-revision-number): Increment to 10.

	* lisp/nnimap.el
	(nnimap-request-article-part): Handle `BODY' fetch response when
	the server implements IMAP4 rev1 capabilities.
	(nnimap-request-article): Use BODY.PEEK rather than RFC822.PEEK.
	this attribute was obsoleted in RFC2060.
	(nnimap-request-body): Ditto.

2000-02-29  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-revision-number): Increment to 09.

	* lisp/gnus-ems.el (gnus-tilde-cut-form, gnus-tilde-max-form): Copy
	from gnus-xmas.el; share them with XEmacs-MULE.

	* lisp/gnus-xmas.el (gnus-tilde-cut-form, gnus-tilde-max-form):
	Move to gnus-ems.el.

2000-02-20   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* lisp/gnus.el (gnus-revision-number): Increment to 08.

	* lisp/gnus-bbdb.el: Sync up with Nana-gnus 7 for supporting
	`gnus-bbdb/split-mail'.
	* README-gnus-bbdb.ja: Ditto.

2000-02-08  Yoshiki Hayashi <yoshiki@xemacs.org>
