@@ -1,3 +1,10 @@
+2000-02-21  Yoshiki Hayashi  <yoshiki@xemacs.org>
+
+	* nnvirtual.el (nnvirtual-request-article):
+	Bind gnus-override-method to nil.
+	(nnvirtual-request-update-mark): Don't update mark when
+	article is not there.
+
 2000-03-03   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>
 
 	* lisp/gnus.el (gnus-revision-number): Increment to 12.
